made the thing at the top right bring to home page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       }
       img.me {
         border-radius: 25px;
-        width: 250px;
+        width: 175px;
         z-index: 1;
       }
       .top-bar {
@@ -56,8 +56,8 @@
       }
       .back {
         border-radius: 20px;
-        width: 400px;
-        height: 400px;
+        width: 300px;
+        height: 300px;
         background-color: var(--back-bar);
         position: absolute;
         top: 50%;
@@ -69,10 +69,15 @@
         color: var(--text);
         margin-top: -2px;
       }
+      .test1 {
+        color: var(--text);
+        margin-top: -2px;
+        text-decoration: none;
+      }
     </style>
   </head>
   <body>
-    <h1>Wasd4130</h1>
+    <h1><a class="test1" href="index.html">Wasd4130</a></h1>
 
     <div class="top-bar"></div>
 
