--- a/index.html
+++ b/index.html
@@ -5,83 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="Celeste, Wasd4130" />
     <title>Fatal152 is teribel</title>
+    <link rel="stylesheet" href="style.css" />
     <meta
       name="description"
       content="Wasd4130 is the best person in the world, he is kind, compassionate, generous, empathetic, honest, smart and most importantly, humble."
     />
-    <style>
-      :root {
-        --bg: #006d77;
-        --back-bar: #83c5be;
-        --text: #edf6f9;
-      }
-      body {
-        background-color: var(--bg);
-      }
-      .test {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        -ms-transform: translateY(-50%) translateX(-50%);
-        transform: translateY(-50%) translateX(-50%);
-        text-align: center;
-      }
-      .channel-button {
-        height: 50px;
-        background-color: var(--bg);
-        border-color: transparent;
-        border-width: 3px;
-        border-radius: 6px;
-        font-size: large;
-        color: var(--text);
-        cursor: pointer;
-        transition: ease-out;
-      }
-      .channel-button:hover {
-        background-color: rgb(83, 206, 193);
-      }
-      img.me {
-        border-radius: 25px;
-        width: 175px;
-        z-index: 1;
-      }
-      .top-bar {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 50px;
-        background-color: var(--back-bar);
-        z-index: -1;
-      }
-      .back {
-        border-radius: 20px;
-        width: 300px;
-        height: 300px;
-        background-color: var(--back-bar);
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        -ms-transform: translateY(-50%) translateX(-50%);
-        transform: translateY(-50%) translateX(-50%);
-      }
-      h1 {
-        color: var(--text);
-        margin-top: -2px;
-      }
-      .test1 {
-        color: var(--text);
-        margin-top: -2px;
-        text-decoration: none;
-      }
-    </style>
   </head>
   <body>
     <h1><a class="test1" href="index.html">Wasd4130</a></h1>
 
     <div class="top-bar"></div>
 
-    <div class="back"></div>
+    <div class="back" draggable="false"></div>
 
     <div class="test">
       <br />
