--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     />
   </head>
   <body>
-    <h1><a class="test1" href="index.html">Wasd4130</a></h1>
+    <h1><a class="home" href="index.html">Wasd4130</a></h1>
 
     <div class="top-bar"></div>
 
     <div class="back" draggable="false"></div>
 
-    <div class="test">
+    <div class="center">
       <br />
       <div>
         <img class="me" src="images/me.jpg" alt="me" />
