--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
       </div>
       <div>
         <br />
-        <a href="https://www.youtube.com/@Wasd4130/" target="_blank"
+        <a
+          href="https://www.youtube.com/@Wasd4130/"
+          target="_blank "
+          rel="noopener noreferrer"
           ><button class="channel-button">My channel</button></a
         >
       </div>
